<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context=".Inscription">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_auto_ecole"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <TextView
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/inscription"
        android:textSize="36sp"
        />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:drawableStart="@drawable/ic_user"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/name"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="10dp"
        android:inputType="text"
        />

    <RadioGroup
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homme"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="-35dp"
            android:layout_marginRight="120dp"
            android:text="@string/femme"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_pwd"
        android:drawableLeft="@drawable/ic_pwd"
        />

    <EditText
        android:id="@+id/txt_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_pwd"
        android:drawableLeft="@drawable/ic_pwd"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_name"
        android:drawableLeft="@drawable/ic_email_name"
        />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/valider"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</LinearLayout>