<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo_auto_ecole"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_account_name"
        android:drawableLeft="@drawable/ic_account_name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_password_name"
        android:drawableLeft="@drawable/ic_password_name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_authentifier"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/authentifier"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_linkAide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-35dp"
        android:layout_marginRight="20dp"
        android:text="@string/aide"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="15dp"
        android:text="@string/inscription_question"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_linkInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-21dp"
        android:layout_marginRight="55dp"
        android:gravity="end"
        android:text="@string/inscrivez_vous"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>